--- a/app/src/main/res/layout/sample_screen.xml
+++ b/app/src/main/res/layout/sample_screen.xml
@@ -6,6 +6,9 @@
 
     <TextView
         android:id="@+id/sample_field"
+        style="@style/BoldTitle"
+        android:layout_marginTop="@dimen/standard_margin"
+        android:layout_marginBottom="@dimen/small_margin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/sample_text"
