--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -3,6 +3,6 @@
 
     <item android:id="@+id/item_login" android:title="LogIn" />
     <item android:id="@+id/item_mentor" android:title="Mentor" />
-    <item android:id="item_letcures" android:title="Lectures" />
-    <item android:id="item_map" android:title="Map" />
+    <item android:id="@+id/item_letcure" android:title="Lectures" />
+    <item android:id="@+id/item_map" android:title="Map" />
 </menu>
