--- a/app/src/main/res/layout/lectures_item_fragment.xml
+++ b/app/src/main/res/layout/lectures_item_fragment.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:gravity="center"
+    android:gravity="left"
     android:orientation="vertical"
     android:paddingBottom="@dimen/small_margin">
 
@@ -12,33 +12,54 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="142dp"
+        android:layout_gravity="center"
+
         android:stateListAnimator="@android:anim/accelerate_interpolator">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="94dp"
-            android:gravity="center"
-            android:orientation="vertical"
+            android:layout_height="match_parent"
+            android:gravity="center_horizontal"
+            android:orientation="horizontal"
             android:weightSum="4">
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_margin="@dimen/standard_margin"
+                android:orientation="vertical"
                 android:layout_weight="3"
-                android:orientation="vertical">
+                android:layout_margin="@dimen/standard_margin">
 
                 <TextView
-                    android:id="@+id/lectures_item_fragment_lecturename"
+                    android:id="@+id/lecture_item_fragment_lecturename"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="TextView"
                     android:textAllCaps="true"
                     android:textSize="@dimen/text_title_size"
-                    tools:text="Androidacademy course" />
+                    tools:text="Androidacademy Lecture" />
+
+                <TextView
+                    android:id="@+id/lecture_item_fragment_lecturetags"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="TextView"
+                    android:textAllCaps="true"
+                    android:textColor="#999"
+                    android:padding="@dimen/text_title_size"
+                    android:textSize="@dimen/text_title_size"
+                    tools:text="#Java #ANdroid #KOTLIN #AI" />
 
             </LinearLayout>
 
+            <ImageButton
+                android:id="@+id/lecture_item_fragment_imgurl"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:layout_margin="@dimen/standard_margin"
+                android:src="@drawable/common_google_signin_btn_icon_dark" />
         </LinearLayout>
+
     </androidx.cardview.widget.CardView>
 </LinearLayout>
