--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
 
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<group android:checkableBehavior="single">
     <item android:id="@+id/item_login" android:title="@string/appbar_item_login" />
     <item android:id="@+id/item_mentor" android:title="@string/appbar_item_mentor" />
-    <item android:id="@+id/item_letcure" android:title="@string/appbar_item_lectures" />
+    <item android:id="@+id/item_letcures" android:title="@string/appbar_item_lectures" />
     <item android:id="@+id/item_map" android:title="@string/appbar_item_map" />
+</group>
+
 </menu>
