--- a/app/src/main/res/layout/course_item_fragment.xml
+++ b/app/src/main/res/layout/course_item_fragment.xml
@@ -5,14 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="left"
-    android:orientation="vertical"
-    android:paddingBottom="@dimen/small_margin">
-
-
-    <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="142dp"
-        android:stateListAnimator="@android:anim/accelerate_interpolator">
+    android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -29,6 +22,7 @@
                 android:layout_margin="@dimen/standard_margin">
 
                 <TextView
+                    android:textStyle="bold"
                     android:id="@+id/course_item_fragment_coursename"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -48,11 +42,10 @@
 
             <ImageButton
                 android:id="@+id/imageButton"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
                 android:layout_weight="1"
                 android:layout_margin="@dimen/standard_margin"
                 android:src="@drawable/common_google_signin_btn_icon_dark" />
         </LinearLayout>
-    </androidx.cardview.widget.CardView>
 </LinearLayout>
