--- a/app/src/main/res/layout/lectures_item_fragment.xml
+++ b/app/src/main/res/layout/lectures_item_fragment.xml
@@ -31,6 +31,7 @@
                 android:layout_margin="@dimen/standard_margin">
 
                 <TextView
+                    android:textStyle="bold"
                     android:id="@+id/lecture_item_fragment_lecturename"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
