--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -2,10 +2,10 @@
 
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 <group android:checkableBehavior="single">
-    <item android:id="@+id/item_login" android:title="@string/appbar_item_login" />
-    <item android:id="@+id/item_mentor" android:title="@string/appbar_item_mentor" />
-    <item android:id="@+id/item_letcures" android:title="@string/appbar_item_lectures" />
-    <item android:id="@+id/item_map" android:title="@string/appbar_item_map" />
+    <item android:id="@+id/item_login" android:title="@string/appbar_item_login" android:icon="@android:drawable/ic_input_add" />
+    <item android:id="@+id/item_mentor" android:title="@string/appbar_item_mentor"  android:icon="@android:drawable/ic_input_add" />
+    <item android:id="@+id/item_letcures" android:title="@string/appbar_item_lectures"  android:icon="@android:drawable/ic_input_add" />
+    <item android:id="@+id/item_map" android:title="@string/appbar_item_map"  android:icon="@android:drawable/ic_menu_zoom" />
 </group>
 
 </menu>
