--- a/app/src/main/res/layout/registration_fragment.xml
+++ b/app/src/main/res/layout/registration_fragment.xml
@@ -1,17 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:app="http://schemas.android.com/apk/res-auto"
-xmlns:tools="http://schemas.android.com/tools"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-tools:context=".ui.registration.RegistrationFragment">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_margin="@dimen/standard_margin"
+    tools:context=".ui.registration.RegistrationFragment">
+
+    <com.google.android.material.progressindicator.CircularProgressIndicator
+        android:id="@+id/registration_progress_bar"
+        android:visibility="gone"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/registration_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/large_margin"
         android:gravity="center"
         android:text="@string/registration_title"
+        android:textAllCaps="true"
+        android:textColor="@color/gray"
+        android:textSize="@dimen/text_title_size"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -19,6 +34,8 @@ tools:context=".ui.registration.RegistrationFragment">
         android:id="@+id/registration_fragment_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/large_margin"
+        app:errorEnabled="true"
         app:layout_constraintTop_toBottomOf="@+id/registration_title"
         tools:layout_editor_absoluteX="113dp">
 
@@ -42,59 +59,53 @@ tools:context=".ui.registration.RegistrationFragment">
             android:hint="@string/enter_login" />
     </com.google.android.material.textfield.TextInputLayout>
 
-<com.google.android.material.textfield.TextInputLayout
-    android:id="@+id/registration_fragment_password"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    app:layout_constraintTop_toBottomOf="@+id/registration_fragment_login"
-    app:endIconMode="password_toggle"
-    tools:layout_editor_absoluteX="129dp">
-
-    <com.google.android.material.textfield.TextInputEditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:inputType="textPassword"
-        android:hint="@string/enter_password" />
-
-</com.google.android.material.textfield.TextInputLayout>
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/registration_fragment_password2"
+        android:id="@+id/registration_fragment_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/registration_fragment_password"
         app:endIconMode="password_toggle"
-        app:errorEnabled="true"
+        app:layout_constraintTop_toBottomOf="@+id/registration_fragment_login"
         tools:layout_editor_absoluteX="129dp">
 
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="textPassword"
-            android:hint="@string/enter_password_again" />
+            android:hint="@string/enter_password"
+            android:inputType="textPassword" />
+
     </com.google.android.material.textfield.TextInputLayout>
 
-<CheckBox
-    android:id="@+id/registration_fragment_ismentor_checkbox"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:text="@string/is_mentor"
-    app:layout_constraintTop_toBottomOf="@+id/registration_fragment_password2"
-    tools:layout_editor_absoluteX="21dp" />
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/registration_fragment_password2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:endIconMode="password_toggle"
+        app:errorEnabled="true"
+        app:layout_constraintTop_toBottomOf="@+id/registration_fragment_password"
+        tools:layout_editor_absoluteX="129dp">
 
-<Button
-    android:id="@+id/registration_fragment_sign_up_button"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="@string/sign_up"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/registration_fragment_ismentor_checkbox" />
+        <com.google.android.material.textfield.TextInputEditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/enter_password_again"
+            android:inputType="textPassword" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <CheckBox
+        android:id="@+id/registration_fragment_ismentor_checkbox"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/is_mentor"
+        android:textSize="@dimen/text_mid_size"
+        app:layout_constraintTop_toBottomOf="@+id/registration_fragment_password2"
+        tools:layout_editor_absoluteX="21dp" />
 
     <Button
-        android:id="@+id/registration_fragment_sign_in_button"
-        android:layout_width="wrap_content"
+        android:id="@+id/registration_fragment_sign_up_button"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/sign_in"
-        app:layout_constraintStart_toEndOf="@+id/registration_fragment_sign_up_button"
+        android:text="@string/sign_up"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/registration_fragment_ismentor_checkbox" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
