--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="gray">#BDBDBD</color>
+    <color name="green_400">#00E676</color>
+    <color name="green_700">#00C853</color>
+    <color name="green">#FF66BB6A</color>
+    <color name="dark_green">#FF43A047</color>
 </resources>
