--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="text_title_size">16sp</dimen>
-    <dimen name="text_regular_size">16sp</dimen>
+    <dimen name="text_title_size">24sp</dimen>
+    <dimen name="text_mid_size">18sp</dimen>
+    <dimen name="text_small_size">16sp</dimen>
     <dimen name="standard_margin">16dp</dimen>
     <dimen name="small_margin">8dp</dimen>
+    <dimen name="large_margin">64dp</dimen>
 </resources>
