add few changes to lectures list

--- a/app/src/main/res/layout/lectures_list_fragment.xml
+++ b/app/src/main/res/layout/lectures_list_fragment.xml
@@ -9,11 +9,11 @@
         android:id="@+id/lectures_list_fragment_recycler"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:layout_editor_absoluteX="138dp"
-        tools:layout_editor_absoluteY="48dp" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="138dp" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/course_fragment_fab"
+        android:id="@+id/lectures_fragment_fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/small_margin"
