Update course list

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="green_700">#00C853</color>
     <color name="green">#FF66BB6A</color>
     <color name="dark_green">#FF43A047</color>
+    <color name="gold">#FFFF00</color>
 </resources>
